--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <h1>Stories</h1>
+  <h1 class="my-5">Stories</h1>
   <%= simple_form_for @story, url: '/stories/wicked/build' do |f| %>
     <%= f.submit 'Create a story...', class: 'btn btn-primary'  %>
   <% end %>
-  <ul>
+  <ul class="my-5">
     <% @stories.each do |story| %>
       <li><%= link_to story.title, story_build_path(story, :final_story) %></li>
     <% end %>
